Add web integration

--- a/browser_action.html
+++ b/browser_action.html
@@ -3,8 +3,8 @@
 
   <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="common.min.css">
-    <link rel="stylesheet" type="text/css" href="browser_action.min.css">
+    <link rel="stylesheet" type="text/css" href="common.css">
+    <link rel="stylesheet" type="text/css" href="browser_action.css">
   </head>
 
   <body>
@@ -20,7 +20,7 @@
 
     <div id="meaning" style="display: none;"></div>
 
-    <script type="text/javascript" src="browser_action.min.js"></script>
+    <script type="text/javascript" src="browser_action.js"></script>
   </body>
 
 </html>
